# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
pre_commit_hooks/: check_changelog_updated.py  util.py
