[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.0"
description = ""
authors = ["Patrick Rodrigues <patrick.pwall@gmail.com>"]
readme = "README.md"
packages = [{include = "pre_commit_hooks"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
