[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.0"
description = "Custom pre-commit hooks for [pre-commit](https://pre-commit.com/)."
authors = ["Patrick Rodrigues <patrick.pwall@gmail.com>"]
readme = "README.md"
packages = [{include = "pre_commit_hooks"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[tool.poetry.scripts]
check-changelog-updated = "pre_commit_hooks.check_changelog_updated:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_local_folder = "tools,tests,pre_commit_hooks"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.bandit]
skips = ["B404", "B603"]
exclude = ["tests", ".venv"]

[tool.skjold]
sources = ["pypa"]
report_only = true
verbose = true
